v<0.2.2>, <20140128> -- Make convert2xml use multiprocess the same way that analyse_corpus does. Update installation instructions.
v<0.2.3>, <20140129> -- ccat now understands how to turn analysed files into clean text.
v<0.3.0>, <20140129> -- Moved corpus-parallel.py to CorpusTools
v<0.3.1>, <20140204> -- Changed the way multiprocessing is done in convert2xml, readd the disambiguation tag to the analysed docs
v<0.3.2>, <20140205> -- Use the old infra for sme.fst, abbr.txt and corr.txt
v<0.3.3>, <20140213> -- Don't write empty analysis files
v<0.3.4>, <20140218> -- Don't write empty converted files
v<0.3.5>, <20140305> -- New scheme for encoding guessing
v<0.3.6>, <20140329> -- Handle hyph tags
v<0.4.0>, <20140507> -- Convert .doc by using docbook-xsl-ns -> html -> our xml
v<0.5.0>, <20140507> -- Change the way Avvir xml files are converted
v<0.5.1>, <20140821> -- Change the way newstags are handled
v<0.7.0>, <20141008> -- Add add_files_to_corpus script, a script to add files in a given directory to a given corpus
v<0.7.1>, <20141008> -- Change the --debug option to --serial in analyse_corpus and remove -r option in ccat
v<0.7.2>, <20141010> -- The file adder is able to add both files and files inside directories. The files are also added to corpus by the file adder.
v<0.7.3>, <20141011> -- Add the script change_corpus_names, update the CorpusNameFixer to use the NameChangerBase as base class
v<0.7.4>, <20141011> -- When using --serial in convert2xml, tell which file is being converted
v<0.7.5>, <20141105> -- Add -v to print the version from all scripts
v<0.7.6>, <20141106> -- Convert filenames to unicode strings in ccat
v<0.7.7>, <20141110> -- Add -v/--version options in the proper way using argparse
v<0.7.8>, <20141110> -- Using the DRY-principle for the version info
v<0.7.9>, <20141125> -- Set the correct requirements
v<0.8.0>, <20141127> -- Support for docx conversion