@@ -1,2 +1,2 @@
 # The current CorpusTools version
-VERSION = '0.8.0'
+VERSION = '0.8.1'
