@@ -1,10 +1,10 @@
 <document>
     <header>
-        <title></title>
+        <title>Untitled</title>
     </header>
 
     <body>
-        <p>–Mun lean njeallje jagi boaris.</p>
+        <p>-Mun lean njeallje jagi boaris.</p>
 
        <p>Nu beaivvádat.</p>
 
@@ -16,7 +16,7 @@
 
        <p>Lea go dus meahccebiila ?</p>
 
-       <p>–Mii lea suohttaseamos geassebargu dus ?</p>
+       <p>-Mii lea suohttaseamos geassebargu dus ?</p>
 
        <p>Suohkana bearašásodagaid juohkin</p>
 
