@@ -26,3 +26,4 @@ v<0.7.7>, <20141110> -- Add -v/--version options in the proper way using argpars
 v<0.7.8>, <20141110> -- Using the DRY-principle for the version info
 v<0.7.9>, <20141125> -- Set the correct requirements
 v<0.8.0>, <20141127> -- Support for docx conversion
+v<0.8.1>, <20141127> -- Depend on wvHtml for doc conversion
